# generaturus

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  phrase.rs  rule.rs  rules.rs  symbol.rs  word.rs
src/rules/: mod.rs
