[package]
name = "genomenon"
version = "0.1.0"
authors = ["Mizki SUZUMORI <suzumorimizuki@gmail.com>"]

[dependencies]
csv = "1.0"
failure = "0.1"
lazy_static = "1.1"
# Once a new version in which `IteratorRandom` has been implemented, we should use it.
rand = { git = "https://github.com/rust-lang-nursery/rand" }
regex = "1.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
unicode-normalization = "0.1"
